Added CRUD for trips
